--- a/html-intro/index.html
+++ b/html-intro/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML5 Introduction notes edited in souececode at github.com again/title>
+    <title>HTML5 Introduction notes</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="css/custom.css">
